# qubex-emulator

./: .gitignore  README.md  pyproject.toml
docs/examples/experiment/: 0_basic_usage.ipynb  1_spectroscopy.ipynb  2_frequency_calibration.ipynb  3_pulse_calibration.ipynb  4_t1_t2_experiments.ipynb  5_randomized_benchmarking.ipynb  6_state_tomography.ipynb  7_ef_characterization.ipynb  8_state_classification.ipynb  9_cr_calibration.ipynb
src/qubex_emulator/: __init__.py  simulation.py
tests/: test_qubex_emulator.py
